--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,25 +11,24 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      # JAVA_HOME مثبت مسبقاً على runner
       JAVA_HOME: /usr/lib/jvm/temurin-17-jdk-amd64
 
     steps:
-      # 1) استنساخ الكود
+      # 1) Checkout code
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2) تثبيت تبعيات النظام اللازمة لتجميع hostpython و python-for-android
+      # 2) تثبيت تبعيات النظام اللازمة
       - name: Install apt dependencies
         run: |
           sudo apt-get update
           DEBIAN_FRONTEND=noninteractive sudo apt-get install -y \
             git zip unzip openjdk-17-jdk python3-pip \
             autoconf libtool pkg-config \
-            zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo5 \
+            zlib1g-dev libncurses-dev \
             cmake libffi-dev libssl-dev
 
-      # 3) إعداد بايثون
+      # 3) Setup Python
       - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
@@ -41,12 +40,11 @@ jobs:
           python -m pip install --upgrade pip setuptools wheel
           pip install Cython==0.29.33 buildozer
 
-      # 5) بناء الـ APK 
-      #    نوجّه stdin إلى /dev/null لتجنّب أي prompts وبقاء العملية معلقة
+      # 5) Build the APK (stdin من /dev/null لتجنّب prompts و Broken pipe)
       - name: Build APK with Buildozer
         run: buildozer android debug --verbose < /dev/null
 
-      # 6) رفع الـ APK كـ artifact
+      # 6) Upload the generated APK
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
