--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,37 +14,31 @@ jobs:
       JAVA_HOME: /usr/lib/jvm/temurin-17-jdk-amd64
 
     steps:
-      # 1) Checkout code
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2) تثبيت تبعيات النظام اللازمة
       - name: Install apt dependencies
         run: |
           sudo apt-get update
           DEBIAN_FRONTEND=noninteractive sudo apt-get install -y \
             git zip unzip openjdk-17-jdk python3-pip \
-            autoconf libtool pkg-config \
+            autoconf automake libtool m4 \
             zlib1g-dev libncurses-dev \
             cmake libffi-dev libssl-dev
 
-      # 3) Setup Python
       - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      # 4) تثبيت Buildozer و Cython
       - name: Install Buildozer & dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel
           pip install Cython==0.29.33 buildozer
 
-      # 5) Build the APK (stdin من /dev/null لتجنّب prompts و Broken pipe)
       - name: Build APK with Buildozer
         run: buildozer android debug --verbose < /dev/null
 
-      # 6) Upload the generated APK
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
