--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,51 +9,36 @@ on:
 jobs:
   build-apk:
     runs-on: ubuntu-latest
+
     env:
-      # مسار SDK المستخدم لاحقاً
-      ANDROID_SDK_ROOT: ${{ runner.tool_cache }}/android-sdk
+      JAVA_HOME: /usr/lib/jvm/temurin-17-jdk-amd64
 
     steps:
-      # 1) Checkout الشيفرة
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2) جهّز Java 11 لأن Android Gradle plugin يتطلّب Java 11 :contentReference[oaicite:2]{index=2}
-      - name: Set up Java 11
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '11'
-
-      # 3) ثبّت المكتبات النظامية المطلوبة لـ SDL2 و Kivy :contentReference[oaicite:3]{index=3}
       - name: Install apt dependencies
-        run: sudo apt-get update && sudo apt-get install -y \
-              libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev \
-              libgl1-mesa-dev libgles2-mesa-dev zlib1g-dev libfreetype6-dev
-
-      # 4) جهّز Android SDK & NDK وأدوات البناء :contentReference[oaicite:4]{index=4}
-      - name: Set up Android SDK & NDK
-        uses: android-actions/setup-android@v3
-        with:
-          api-level: 33
-          build-tools: "36.0.0"
-          ndk: "25b"
-
-      # 5) ثبّت Buildozer و Cython
-      - name: Install Buildozer & Cython
         run: |
-          python3 -m pip install --upgrade pip setuptools wheel
+          sudo apt-get update
+          DEBIAN_FRONTEND=noninteractive sudo apt-get install -y \
+            git zip unzip openjdk-17-jdk python3-pip \
+            autoconf automake libtool m4 libltdl-dev \
+            zlib1g-dev libncurses-dev \
+            cmake libffi-dev libssl-dev
+
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install Buildozer & dependencies
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
           pip install Cython==0.29.33 buildozer
 
-      # 6) نظّف أي بناء سابق
-      - name: Clean previous builds
-        run: buildozer android clean
-
-      # 7) إبنِ APK بصلاحيات debug
-      - name: Build APK
+      - name: Build APK with Buildozer
         run: buildozer android debug --verbose < /dev/null
 
-      # 8) ارفع الـ APK الناتج كـ artifact
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
